testing and fixing prohile loading/post
